Make appointments metrics cards into extensions

--- a/packages/esm-appointments-app/translations/en.json
+++ b/packages/esm-appointments-app/translations/en.json
@@ -21,7 +21,6 @@
   "appointmentHistory": "Appointment History",
   "appointmentMarkedChecked": "Appointment marked as Checked In",
   "appointmentMetrics": "Appointment metrics",
-  "appointmentMetricsLoadError": "",
   "appointmentNoteLabel": "Write an additional note",
   "appointmentNotePlaceholder": "Write any additional points here",
   "appointmentNotes": "Appointment Notes",
@@ -88,11 +87,13 @@
   "endTime": "End Time",
   "errorCreatingAppointmentService": "Error creating appointment service",
   "expected": "Expected",
+  "failedToLoadMetrics": "Failed to load",
   "filterAppointments": "Filter appointments",
   "filterAppointmentsByServiceType": "Filter appointments by service type",
   "filterTable": "Filter table",
   "gender": "Gender",
   "highestServiceVolume": "Highest volume service: {{time}}",
+  "highestServiceVolumeCardTitle": "Highest volume service",
   "identifier": "Identifier",
   "invalidNumber": "Number is not valid",
   "isRecurringAppointment": "Is this a recurring appointment?",
@@ -100,6 +101,7 @@
   "loading": "Loading",
   "location": "Location",
   "medications": "Medications",
+  "metricLoadErrorMessage": "Please contact your system administrator if the problem persists.",
   "missed": "Missed",
   "next": "Next",
   "nextMonth": "Next month",
